# gpt4free

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitpod.yml  API_DOCUMENTATION.md  Addition  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.example  Chat GPT Free  ChatGPT free Online  DEV_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile  EXAMPLES_AND_USAGE.md  IMPROVEMENTS_SUMMARY.md  LEGAL_NOTICE.md  MANIFEST.in  OLDREADME.md  PROVIDER_DOCUMENTATION.md  README-DE.md  README.md  REST_API_DOCUMENTATION.md  SECURITY.md  SKILL.md  accounts.txt  app.py  audio.m4a  chat ai gpt  conversations.pkl  demo.docx  demo_gpt4.py  docker-compose-proxy.yml  docker-compose-slim.yml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  downloads.json  example.env  (+33 more)
.github/: FUNDING.yml  copilot-instructions.md
Docker/: Dockerfile
Singularity/: gpt4free.sif
cocalc/: __init__.py  readme.md
docker/: Dockerfile  Dockerfile-armv7  Dockerfile-slim  start-selenium-node.sh  start.sh  supervisor-api.conf  supervisor-gui.conf  supervisor.conf  update-cron  update.sh
docs/: API_REFERENCE.md  README.md  USAGE.md  aarch64-compatibility.md  arm64-build-plan.md  async_client.md  authentication.md  build-workflow.md  client.md  config-yaml-routing.md  configuration.md  docker.md  file.md  git.md  gui.md  interference-api.md  interference.md  leagcy.md  legacy.md  local.md  mcp-usage-guide.md  media.md  providers-and-models.md  providers.md  pydantic_ai.md  reasoning-standardization.md  requests.md  requirements.md  reverse-proxy-quickstart.md  reverse-proxy.md  selecting_a_provider.md  vision.md  webview.md
examples/: ecosia.py
forefront/: README.md  __init__.py  mail.py  (+1 more)
g4f/.v1/: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
g4f/.v1/Singularity/: gpt4free.sif
g4f/.v1/gpt4free/: README.md  __init__.py  test.py
g4f/.v1/gpt4free/aicolors/: __init__.py
g4f/.v1/gpt4free/deepai/: __init__.py
g4f/.v1/gpt4free/forefront/: __init__.py  typing.py
g4f/.v1/gpt4free/hpgptai/: README.md
g4f/.v1/gpt4free/quora/: README.md  __init__.py  backup-mail.py  mail.py
g4f/.v1/gpt4free/quora/graphql/: MessageDeletedSubscription.graphql
g4f/.v1/gpt4free/usesless/: README.md  account.json  account_creation.py
g4f/.v1/gpt4free/you/: README.md  __init__.py
g4f/.v1/gui/: query_methods.py  streamlit_chat_app.py
g4f/.v1/testing/: aicolors_test.py  deepai_test.py  gptworldai_test.py  italygpt2_test.py  openaihosted_test.py  poe_account_create_test.py  poe_test.py  sqlchat_test.py  t3nsor_test.py  test_main.py  writesonic_test.py  you_test.py
g4f/.v1/unfinished/bard/: README.md
g4f/.v1/unfinished/chatpdf/: __init__.py
g4f/.v1/unfinished/gptbz/: README.md
g4f/.v1/unfinished/openprompt/: create.py  test.py
(+1134 files in other folders)
