[tool.poetry]
name = "openai-rev"
version = "0.1.0"
description = ""
authors = []
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "gpt4free" }]
exclude = ["**/*.txt"]

[tool.poetry.dependencies]
python = "^3.7"
websocket-client = "^1.5.1"
requests = "2.29.0"
tls-client = "^0.2"
pypasser = "^0.0.5"
names = "^0.3.0"
colorama = "^0.4.6"
curl-cffi = "^0.5.5"
selenium = "^4.9.0"
fake-useragent = "^1.1.3"
twocaptcha = "^0.0.1"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
